# Tavern-Cook-Book

./: .env.example  .gitignore  AGENTS.md  README.md  index.html  lore-data.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.mjs
.github/workflows/: desktop.yml  pages.yml
api/: assistant.ts  drive-list.ts  health.ts  liveblocks-auth.ts  story-scribe.ts  sync.ts
docs/: desktop-app.md
docs/imported-chat-history/: build-tavern-cook-book-app.memory.md  build-tavern-cook-book-app.transcript.md
public/: lore-data.json
scripts/: import-codex-session.mjs
server/: assistantBackend.ts  driveListBackend.ts  index.ts  liveblocksAuthBackend.ts  storyScribeBackend.ts  syncBackend.ts
src/: App.tsx  liveblocks.config.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AccessGate.tsx  AdjustableImage.tsx  ArtBinderPage.tsx  ArtVaultDashboard.tsx  AssignmentSystem.tsx  AssistantPanel.tsx  BestiaryPage.tsx  BrandImageEditor.tsx  CharacterDetailPage.tsx  CharacterProfileView.tsx  CharacterRoster.tsx  CustomSelect.tsx  Dashboard.tsx  DriveAwareImage.tsx  DriveImagePickerButton.tsx  DriveImageSourceControls.tsx  EntryCard.tsx  EntryGrid.tsx  EntryModal.tsx  FavoriteButton.tsx  FavoritesPage.tsx  HubPage.tsx  Icon.tsx  ImageAdjustModal.tsx  ImageManagerModal.tsx  InteractiveImageFitFrame.tsx  LauncherPage.tsx  LinkedStoryReferences.tsx  LoreKeywordText.tsx  PantryPage.tsx  ProfilePage.tsx  QuestDashboard.tsx  (+19 more)
(+35 files in other folders)
