[package]
name = "stl-tavern-cook-book-desktop"
version = "1.0.0"
description = "STL Productionz desktop launcher for The Tavern Cook Book"
authors = ["STL Productionz"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
